exercise one completed

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "type": "git",
     "url": "git://github.com/kentcdodds/es6-workshop.git"
   },
-  "dependencies": {},
+  "dependencies": {
+    "husky": "^8.0.2"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "chalk": "^2.3.2",
